添加集成测试